--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,8 @@ line-length = 100
 pythonVersion = "3.11"
 typeCheckingMode = "strict"
 
+reportMissingModuleSource = false
+
 [tool.ruff]
 target-version = "py311"
 line-length = 100
