--- a/dialog_skipper/pyproject.toml
+++ b/dialog_skipper/pyproject.toml
@@ -6,3 +6,5 @@ description = "Adds a keybind to skip dialog."
 
 [tool.sdkmod]
 name = "Dialog Skipper"
+license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
+download = "https://github.com/apple1417/oak-sdk-mods/releases/download/nightly/dialog_skipper.sdkmod"
