--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,6 @@ jobs:
 
     needs:
       - spelling
-      - black
       - pyright
       - ruff
 
@@ -63,18 +62,6 @@ jobs:
     - name: Check spelling
       uses: crate-ci/typos@master
 
-  black:
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
-
-    - name: Check formatting
-      uses: psf/black@stable
-      with:
-        options: --check --verbose
-
   pyright:
     runs-on: ubuntu-latest
 
@@ -83,7 +70,6 @@ jobs:
       uses: actions/checkout@v3
       with:
         path: oak-sdk-mods
-
 
     - name: Checkout pyunrealsdk
       uses: actions/checkout@v4
@@ -125,5 +111,10 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v3
 
-    - name: Run Ruff
+    - name: Run Ruff Linting
       uses: chartboost/ruff-action@v1
+
+    - name: Run Ruff Formatting
+      uses: chartboost/ruff-action@v1
+      with:
+        args: format --check
