work out db file locking when using native module

--- a/hunt/native/CMakeLists.txt
+++ b/hunt/native/CMakeLists.txt
@@ -1,12 +1,15 @@
 pyunrealsdk_add_module(osd osd.cpp)
 
-pyunrealsdk_add_module(tmp tmp.cpp)
-target_link_libraries(tmp PRIVATE sqlite3)
+pyunrealsdk_add_module(drops
+    drops/main.cpp
+    drops/sql.cpp
+)
+target_link_libraries(drops PRIVATE sqlite3)
 
 install(
     TARGETS
         osd
-        tmp
+        drops
     DESTINATION
         ${CMAKE_CURRENT_SOURCE_DIR}
 )
