--- a/hunt/native/CMakeLists.txt
+++ b/hunt/native/CMakeLists.txt
@@ -2,6 +2,7 @@ pyunrealsdk_add_module(osd osd.cpp)
 
 pyunrealsdk_add_module(drops
     drops/main.cpp
+    drops/balance.cpp
     drops/sql.cpp
 )
 target_link_libraries(drops PRIVATE sqlite3)
