--- a/hunt/native/CMakeLists.txt
+++ b/hunt/native/CMakeLists.txt
@@ -3,6 +3,9 @@ pyunrealsdk_add_module(osd osd.cpp)
 pyunrealsdk_add_module(drops
     drops/main.cpp
     drops/balance.cpp
+    drops/drop_queries.cpp
+    drops/find_drop_request.cpp
+    drops/hooks.cpp
     drops/sql.cpp
 )
 target_link_libraries(drops PRIVATE sqlite3)
