--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
-[submodule "pyunrealsdk"]
-	path = .libs/pyunrealsdk
-	url = git@github.com:bl-sdk/pyunrealsdk.git
-[submodule ".libs/pyunrealsdk"]
-	path = .libs/pyunrealsdk
-	url = git@github.com:bl-sdk/pyunrealsdk.git
+[submodule ".common_cmake"]
+	path = .common_cmake
+	url = git@github.com:bl-sdk/common_cmake.git
