swap mod manager to submodule
after sleeping on it, rather not do the ssh key stuff
there's no need to use fetch content if I'm going to manually bump the tag (instead of creating a latest)

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule ".common_cmake"]
-	path = .common_cmake
-	url = git@github.com:bl-sdk/common_cmake.git
+[submodule ".oak-mod-manager"]
+	path = .oak-mod-manager
+	url = git@github.com:bl-sdk/oak-mod-manager.git
