--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -333,40 +333,10 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
       with:
-        path: oak-sdk-mods
-
-    - name: Checkout pyunrealsdk
-      uses: actions/checkout@v4
-      with:
-        repository: bl-sdk/pyunrealsdk
-        path: pyunrealsdk
-
-    - name: Checkout oak-mod-manager
-      uses: actions/checkout@v4
-      with:
-        repository: bl-sdk/oak-mod-manager
-        path: oak-mod-manager
-
-    - name: Setup Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: ">=3.11"
-        cache: 'pip'
-
-    - name: Install tomlq
-      run: pip install yq
-
-    - name: Add stub paths to pyproject.toml
-      run: >
-        tomlq -it '.tool.pyright.extraPaths =
-        ["../pyunrealsdk/stubs",
-        "../oak-mod-manager/src"]'
-        oak-sdk-mods/pyproject.toml
+        submodules: recursive
 
     - name: Run pyright
       uses: jakebailey/pyright-action@v2
-      with:
-        working-directory: oak-sdk-mods
 
   ruff:
     runs-on: ubuntu-latest
