--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,20 @@
 [tool.pyright]
-pythonVersion = "3.11"
+pythonVersion = "3.12"
 typeCheckingMode = "strict"
 
 reportMissingModuleSource = false
 
+extraPaths = [
+    ".oak-mod-manager/src",
+    ".oak-mod-manager/libs/pyunrealsdk/stubs",
+]
+
 [tool.ruff]
-target-version = "py311"
+target-version = "py312"
 line-length = 100
+exclude = [".*"]
+
+[tool.ruff.lint]
 select = [
     "F",
     "W",
@@ -30,6 +38,7 @@ select = [
     "FA",
     "ISC",
     "ICN",
+    "LOG",
     "G",
     "PIE",
     "PYI",
@@ -51,7 +60,6 @@ select = [
     "FLY",
     "PERF",
     "FURB",
-    "LOG",
     "RUF",
 ]
 ignore = [
@@ -94,5 +102,5 @@ ignore = [
     "FURB140",
 ]
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
 "*.pyi" = ["D418", "A002", "A003"]
