prep for different raw keybinds import in sdk 1.3

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -337,6 +337,8 @@ jobs:
 
     - name: Run pyright
       uses: jakebailey/pyright-action@v2
+      with:
+        pylance-version: latest-release
 
   ruff:
     runs-on: ubuntu-latest
