--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,11 @@
 .vs
 .vscode
+.idea
 
 # C/C++ excludes
 .cache/clangd
 .gdbinit
 .out
-
-# User scripts with templates
-postbuild
-postbuild.bat
 
 # CMake (from https://github.com/github/gitignore/blob/main/CMake.gitignore)
 CMakeLists.txt.user
