--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 .cache/clangd
 .gdbinit
 .out
+.nvim.lua
 
 # CMake (from https://github.com/github/gitignore/blob/main/CMake.gitignore)
 CMakeLists.txt.user
